--- a/src/styles.css
+++ b/src/styles.css
@@ -32,15 +32,15 @@ button {
   display: block;
   margin-bottom: 24px;
   background: #3ecf8e;
+}
 
-  &:hover {
-    box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
-    transform: translateY(-1px);
-  }
+button:hover {
+  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+  transform: translateY(-1px);
+}
 
-  &:active {
-    transform: translateY(1px);
-    box-shadow: 0 6px 12px -2px rgba(50, 50, 93, 0.25),
+button:active {
+  transform: translateY(1px);
+  box-shadow: 0 6px 12px -2px rgba(50, 50, 93, 0.25),
       0 3px 7px -3px rgba(0, 0, 0, 0.3);
-  }
 }
